<resources>
    <string name="app_name">Slide6</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="donate">Donate</string>
    <string name="s">£</string>
    <string name="total_so_far">Total so Far $</string>
    <string name="todo">TODO</string>
    <string name="amount">Amount</string>
    <string name="direct">Direct</string>
    <string name="paypal">PayPal</string>
    <string name="please_give_generously">Please Give Generously</string>
    <string name="welcome_homer">Welcome Homer</string>
</resources>